# jaeger-client-php-ext

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  jaeger-client.ini  jaeger-client.sln  jaeger-client.vcxproj  jaeger-client.vcxproj.filters  tracer-cpp.ini  tracer-cpp.sln  tracer-cpp.vcxproj  tracer-cpp.vcxproj.filters
src/: BaseExported.h  FileReporter.cpp  FileReporter.h  Helper.cpp  Helper.h  IReporter.cpp  IReporter.h  ISampler.cpp  ISampler.h  ISpan.cpp  ISpan.h  ITracer.cpp  ITracer.h  JaegerSpan.cpp  JaegerSpan.h  JaegerTracer.cpp  JaegerTracer.h  Log.cpp  Log.h  Logger.cpp  Logger.h  NoopSpan.cpp  NoopSpan.h  NoopTracer.cpp  NoopTracer.h  PageViewHandler.cpp  PageViewHandler.h  PercentageSampler.cpp  PercentageSampler.h  Printer.cpp  Printer.h  Process.cpp  Process.h  SpanContext.cpp  SpanContext.h  Tag.cpp  Tag.h  TextCarrier.cpp  TextCarrier.h  Tracer.cpp  (+4 more)
src/thrift-gen/: Agent.cpp  Agent.h  jaeger_types.cpp  jaeger_types.h  zipkincore_types.cpp  zipkincore_types.h
src/thrift-lib/: TBase.h  TLogging.h  TOutput.cpp  Thrift.h
src/thrift-lib/protocol/: TBinaryProtocol.h  TBinaryProtocol.tcc  TCompactProtocol.h  TCompactProtocol.tcc  TProtocol.cpp  TProtocol.h  TVirtualProtocol.h
src/thrift-lib/thrift/: TOutput.cpp  Thrift.h
src/thrift-lib/thrift/protocol/: TCompactProtocol.h  TCompactProtocol.tcc  TProtocol.h
src/thrift-lib/transport/: TBufferTransports.cpp  TBufferTransports.h  TSocket.cpp  TSocket.h  TTransport.h  TTransportException.cpp  TTransportException.h  TVirtualTransport.h
test/: index.php  request.http  request.rest
(+4 files in other folders)
